# Http-ConfigAccountGroup

./: CMakeLists.txt  Config.cpp  Config.h  HttpServer.cpp  HttpServer.h  Logger.cpp  Logger.h  MT4ManagerAPI.h  MT4Module.cpp  MT4Module.h  README.md  SqliteClient.cpp  SqliteClient.h  Utils.cpp  Utils.h  main.cpp
config/: app.conf  spdlog.conf
lib/: libevent.lib
lib/libevent/: libevent_core.lib  libevent_extras.lib
lib/openssl/: libeay32.lib
lib/sqlite3/: sqlite3.lib
lib/zlib/: zlibwapi.lib
